# boilerplate

./: cookiecutter.json
docs/: commits_2025-03-09.md
{{ cookiecutter._project_slug }}/: README.md  pyproject.toml
{{ cookiecutter._project_slug }}/.github/ISSUE_TEMPLATE/: feat.yml  hotfix.yml
{{ cookiecutter._project_slug }}/config/: __init__.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  newrelic.ini  pyproject.toml  setup.sh
{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: chore.yml  config.yml  fix.yml  refactor.yml
{{ cookiecutter.project_slug }}/config/: __init__.py
{{ cookiecutter.project_slug }}/extras/: README.md
{{ cookiecutter.project_slug }}/tests/: test_sample.py
