[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
requires-python = ">=3.12"
description = "{{ cookiecutter.description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.email }}" }
]
dependencies = [
    "pydantic>=2.12.3",
]


[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
format = "ruff check . --fix && ruff format ."
lint = "ruff check ."

test = "pytest --cov -vv"
post_test = "coverage html"
up = "docker compose up -d"
down = "docker compose down"

[tool.ruff]
line-length = 79
exclude = ["tests", ".venv"]


[tool.lint]
select = ["E", "F", "Q", "I"]
fix = true
unsafe-fixes = false


[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
ignore = ["SIM103", "E701", "E722", "F821"]


[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "asyncio: Mark a test as asyncio test."
]
