[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
requires-python = ">=3.12"
description = "{{ cookiecutter.description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.email }}" }
]
dependencies = [
    "pydantic>=2.12.3",
]


[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.12.11",
  "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
format = "ruff check . --fix && ruff format ."
lint = "ruff check . --fix"
test = "pytest --cov -vv"
post_test = "coverage html"
up = "docker compose up -d"
down = "docker compose down"
start = "de acordo com o start do projeto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 79
exclude = ["tests", ".venv", "migrations/", "*.txt", "*.pyc", "*.pyo"]

[tool.ruff.lint]
select = ["E", "F", "Q", "I"]
ignore = ["E501", "F401", "D100", "D101", "D102", "SIM103", "E701", "E722", "F821"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"